# LearningOpenCV

./: .gitignore  CMakeLists.txt
include/AprilTag/: Edge.cc  Edge.h  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  GrayModel.h  Homography33.cc  Homography33.h  MathUtil.cc  MathUtil.h  Quad.cc  Quad.h  Segment.cc  TagDetection.cc  TagDetection.h  TagDetector.cc  TagDetector.h  TagFamily.cc  TagFamily.h  TagShow.cc  TagShow.h  UnionFindSimple.cc
resource/apriltag/: pose.txt
resource/result/: cameraParameters.xml
src/: AgvCalibration.cpp  AgvCalibration.h  calibration.cpp  calibration.h  camera.cpp  camera.h  main.cpp
